--- a/deploy/002-service-account.yaml
+++ b/deploy/002-service-account.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: ktest-webhook-sa
-  namespace: ktest-webhook
+  name: khaos-webhook-sa
+  namespace: khaos-webhook
   labels:
-    app: ktest-webhook
+    app: khaos-webhook
