--- a/deploy/000-khaos-config.yaml
+++ b/deploy/000-khaos-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: ktest-config
-  namespace: ktest-webhook
+  name: khaos-config
+  namespace: khaos-webhook
 data:
   traceonly: "false"
